上傳 Jerry 變更程式碼
將 Jerry 提供的 temp/test.zip 原始碼變更套用到 update-0602 分支。

主要變更：

- 新增 HistoryManager，負責記錄並讀取聊天與檔案歷史。

- 擴充 HistoryItem，加入 timestamp、content、isIncoming、type 欄位與 getter。

- HistoryStage 改為從 HistoryManager 載入指定 peer 的歷史紀錄。

- ModernCard 新增拖放文字、拖放檔案、待下載檔案 offer 與下載請求處理。

- MainStage 新增 pending file offer 管理，處理 OFFER_ID、REQUEST_FILE、FILE_ARRIVED 訊息流程，並更新檔案傳輸後的卡片狀態。

- RealP2PManager 在收到文字與檔案儲存事件時寫入歷史紀錄。

- ui/pom.xml 將 Java / JavaFX 設定改為 17 / 17.0.1。

來源分析：

- 壓縮檔解出來的資料夾名稱是 DropGoLine.java-feat-ui-skeleton，推測 Jerry 是從 feat-ui-skeleton 分支下載後修改。

- tracked source 大多與 feat/ui-skeleton 的 6b5034f 相同，只差本 commit 套用的檔案。

未提交內容：

- target 目錄、class/jar 建置產物、.DS_Store、以及 runtime 產生的 ui/history.txt 沒有放入 commit。